--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -7,4 +7,20 @@
 <body>
     <h1 th:text="'List of Vets'">List of Vets...</h1>
 </body>
+<table>
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">1</td>
+        <td th:text="${vet.lastName}">1</td>
+    </tr>
+    </tbody>
+</table>
 </html>
