--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Vets</title>
 </head>
 <body>
-    <h1 th:text="'List of Vets'">List of Vets...</h1>
-</body>
-<table>
+<h2 th:text="'List of Vets'">List of Vets...</h2>
+<table class="table table-striped">
     <thead>
     <tr>
         <th>id</th>
@@ -23,4 +22,5 @@
     </tr>
     </tbody>
 </table>
+</body>
 </html>
